--- a/src/app/pages/CadastrarnovoUsuario/CadastrarnovoUsuario.component.html
+++ b/src/app/pages/CadastrarnovoUsuario/CadastrarnovoUsuario.component.html
@@ -3,7 +3,7 @@
   <!-- Botão fechar -->
   <button class="btn-close" (click)="fechar.emit()">✕</button>
 
-  <h2>Cadastrar Usuário</h2>
+  <h2 class="ClassTitulo">Cadastrar Usuário</h2>
 
   <div class="form-group">
     <label>Nome</label>
