Adicionando mais dados de exclusáo frontend

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -15,7 +15,7 @@
     <!-- LOGO CORRETA -->
     <div class="logo">
       <img src="../../../assets/logo.png" class="logo-img" />
-      <span>MySystem</span>
+      <span>RME TECH</span>
     </div>
 
     <nav class="menu-list">
