--- a/src/app/pages/DeletarUsuario/DeleteUsuarios.component.css
+++ b/src/app/pages/DeletarUsuario/DeleteUsuarios.component.css
@@ -17,7 +17,7 @@
   padding: 35px 40px;
   border-radius: 16px;
   box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-  animation: fadeIn .25s ease-out;
+  animation: fadeIn .25s ease-out; /**/
 }
 
 /* ANIMAÇÃO */
