cOMEMORANDO ENVIO SMTP

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="options">
-          <a href="#">Esqueci a senha</a>
+  <a routerLink="/recuperarsenha">Esqueci a senha</a>
           <a href="#">Criar conta</a>
         </div>
 
@@ -29,9 +29,7 @@
           Entrar
         </button>
 
-        <div class="cadastro">
-          Ainda não possui conta? <a href="#">Cadastre-se</a>
-        </div>
+
 
       </form>
 
