--- a/src/app/pages/redefinirsenha/redefinirsenha.component.html
+++ b/src/app/pages/redefinirsenha/redefinirsenha.component.html
@@ -1,8 +1,10 @@
-<div class="card">
-  <h2>Redefinir Senha</h2>
+<div class="reset-wrapper">
+  <div class="card">
+    <h2>Redefinir Senha</h2>
 
-  <input type="password" [(ngModel)]="senha" placeholder="Nova senha">
-  <input type="password" [(ngModel)]="confirmar" placeholder="Confirmar senha">
+    <input type="password" [(ngModel)]="senha" placeholder="Nova senha">
+    <input type="password" [(ngModel)]="confirmar" placeholder="Confirmar senha">
 
-  <button (click)="redefinir()">Salvar nova senha</button>
+    <button (click)="redefinir()">Salvar nova senha</button>
+  </div>
 </div>
